# quart-assets

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  __init__.py  mkdocs.yml  pyproject.toml  release-please-config.json  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  publish.yml  release.yml  security.yml  tests.yml
docs/: changelog.md  cli.md  configuration.md  examples.md  index.md  installation.md  main.py  quickstart.md
docs/api/: bundles.md  cli.md  environment.md
example/: .gitignore  app.py
example/templates/: index.html
src/quart_assets/: __init__.py  extension.py
tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_env.py  test_integration.py
tests/bp_for_test/: __init__.py
tests/bp_for_test/static/: README
