[build-system]
requires = ["uv_build>=0.6.6,<0.12"]
build-backend = "uv_build"

[project]
name = "quart-assets"
version = "0.1.3"
description = "Asset management for Quart apps"
authors = [
    {name = "Sasha Gerrand",email = "quart-assets@sgerrand.dev"}
]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["quart", "webassets", "assets"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "quart>=0.20.0,<0.21.0",
    "pyscss",
    "pyyaml",
    "webassets>=2.0",
]

[project.entry-points."quart.commands"]
assets = "quart_assets:assets"

[project.urls]
Homepage = "https://github.com/sgerrand/quart-assets"
Repository = "https://github.com/sgerrand/quart-assets"
Documentation = "https://quart-assets.readthedocs.io"
"Bug Tracker" = "https://github.com/sgerrand/quart-assets/issues"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pyyaml",
]
dev = [
    {include-group = "test"},
    "tox",
    "tox-uv",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings-python",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-macros-plugin>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "quart_assets, tests"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--showlocals --strict-markers"
testpaths = ["tests"]

[tool.tox]
env_list = ["format", "pep8", "py3{10,11,12,13}", "types", "package", "report"]
skip_missing_interpreters = true
runner = "uv-venv-lock-runner"

[tool.tox.gh_actions.python]
"3.10" = "py310"
"3.11" = "py311"
"3.12" = "py312"
"3.13" = "py313"

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", "--cov", "--cov-append", "{posargs}"]]

[tool.tox.env.format]
base_python = "python3.13"
deps = ["black", "isort"]
skip_install = true
commands = [
    ["black", "--check", "--diff", "src/quart_assets/", "tests/"],
    ["isort", "--check", "--diff", "src/quart_assets/", "tests/"],
]

[tool.tox.env.pep8]
base_python = "python3.13"
deps = ["flake8", "pep8-naming", "flake8-print"]
commands = [["flake8", "src/quart_assets/", "tests/"]]

[tool.tox.env.mypy]
base_python = "python3.13"
deps = ["mypy", "types-PyYAML", "pytest"]
commands = [["mypy", "{toxinidir}"]]

[tool.tox.env.report]
base_python = "python3.13"
deps = ["coverage"]
skip_install = true
commands = [
    ["coverage", "report"],
    ["coverage", "html"],
]

[tool.tox.env.pyright]
base_python = "python3.13"
deps = ["pyright", "pytest", "importlib_metadata", "numpy"]
commands = [["pyright"]]

[tool.tox.env.types]
base_python = "python3.13"
deps = ["mypy", "types-PyYAML", "pytest", "pyright", "importlib_metadata", "numpy"]
commands = [
    ["mypy", "{toxinidir}"],
    ["pyright"],
]

[tool.tox.env.package]
base_python = "python3.13"
allowlist_externals = ["uv"]
deps = ["twine"]
commands = [
    ["uv", "build"],
    ["twine", "check", "dist/*"],
]
